--- a/angular/angular_1.x_docs_getting_started_012116/accessing_the_backend/index.html
+++ b/angular/angular_1.x_docs_getting_started_012116/accessing_the_backend/index.html
@@ -4,28 +4,30 @@
         <title>
             Example backend
         </title>
-      <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.1/angular.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.1/angular.min.js"></script>
       <script src="./invoice3.js"></script>
       <script src="./finance3.js"></script>
     </head>
     <body>
-        <div ng-app="invoice3" ng-controller="InvoiceController as invoice"></div>
-        <b>Invoice:</b>
-        <div>
-            Quantity: <input type="number" min="0" ng-model="invoice.qty" required >
-        </div>
-        <div>
-            Costs: <input type="number" min="0" ng-model="invoice.cost" required >
-            <select ng-model="invoice.inCurr">
-                <option ng-repeat="c in invoice.currencies">{{c}}</option>
-            </select>        
-        </div>
-        <div>
-            <b>Total:</b>
-            <span ng-repeat="c in invoice.currencies">
-                {{invoice.total(c) | currency:c}}
-            </span>
-            <button class="btn" ng-click="invoice.pay()">Pay</button>
+         <div ng-app="invoice3" ng-controller="InvoiceController as invoice">
+            <!-- {{invoice.hello}} -->
+            <b>Invoice:</b>
+            <div>
+                Quantity: <input type="number" min="0" ng-model="invoice.qty" required >
+            </div>
+            <div>
+                Costs: <input type="number" min="0" ng-model="invoice.cost" required >
+                <select ng-model="invoice.inCurr">
+                    <option ng-repeat="c in invoice.currencies">{{c}}</option>
+                </select>
+            </div>
+            <div>
+                <b>Total:</b>
+                <span ng-repeat="c in invoice.currencies">
+                    {{invoice.total(c) | currency:c}}
+                </span>
+                <button class="btn" ng-click="invoice.pay()">Pay</button>
+            </div>
         </div>
     </body>
 </html>
